# nRF52840-dongle-e-paper-display

./: README.md
epd1in54_V2/: CMakeLists.txt  epd1in54_V2.cpp  epd1in54_V2.h  epdif.cpp  epdif.h  epdpaint.cpp  font12.c  font16.c  font20.c  font24.c  font8.c  imagedata.cpp  main.cpp  pgmspace.h  prj.conf
epd1in54_V2/boards/: nrf52840dongle_nrf52840.overlay
lvgl/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
lvgl/boards/: native_posix.conf
nrf52840dongle_nrf52840/: CMakeLists.txt  Kconfig  Kconfig.board  Kconfig.defconfig  board.c  board.cmake  fstab-debugger.dts  fstab-stock.dts  nrf52840dongle_nrf52840.dts  nrf52840dongle_nrf52840.yaml  nrf52840dongle_nrf52840_defconfig
nrf52840dongle_nrf52840/doc/: index.rst
waveshare_epaper/: Kconfig.defconfig  Kconfig.shield  waveshare_epaper_gdeh0154a07.overlay  waveshare_epaper_gdeh0213b1.overlay  waveshare_epaper_gdeh0213b72.overlay  waveshare_epaper_gdeh029a1.overlay  waveshare_epaper_gdew075t7.overlay
waveshare_epaper/doc/: index.rst
waveshare_epaper/dts/: waveshare_epaper_common.dtsi
